--- a/WDSE/WDSE.csproj
+++ b/WDSE/WDSE.csproj
@@ -4,7 +4,7 @@
     <!--<TargetFrameworks>net452;net46;net461;net462;net47;net471;net472;netstandard2.0</TargetFrameworks>-->
     <TargetFrameworks>net452;net46;netstandard2.0</TargetFrameworks>
     <PackageId>Noksa.WebDriver.ScreenshotsExtensions</PackageId>
-    <Version>0.1.5.3</Version>
+    <Version>0.1.5.4</Version>
     <Product>Noksa (Alexandr Danilin)</Product>
     <Company>Noksa (Alexandr Danilin)</Company>
     <Authors>Noksa (Alexandr Danilin)</Authors>
@@ -14,7 +14,7 @@ For examples of usage, see the github project page.
     <Copyright>Noksa (Alexandr Danilin)</Copyright>
     <PackageIconUrl>https://avatars0.githubusercontent.com/u/36312857?s=40&amp;v=4</PackageIconUrl>
     <PackageTags>webdriver, screenshot, selenium, extension, page</PackageTags>
-    <PackageReleaseNotes>Fixed null pointer exception when any alert open</PackageReleaseNotes>
+    <PackageReleaseNotes>Fixed get element with active scrollbar javascript when it's scrollable div not html</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <LangVersion>7.1</LangVersion>
     <PackageProjectUrl>https://github.com/Noksa/WebDriver.Screenshots.Extensions</PackageProjectUrl>
@@ -78,10 +78,10 @@ For examples of usage, see the github project page.
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.9.0" />
-	<PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
-    <PackageReference Include="Selenium.Support" Version="3.8.0" />
-	<PackageReference Include="Selenium.WebDriver" Version="3.8.0" />
+    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.14.5" />
+	<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Selenium.Support" Version="3.141.0" />
+	<PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
 
   <ItemGroup>
