--- a/WDSETests/WDSETests.csproj
+++ b/WDSETests/WDSETests.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Noksa.NUnit.Allure" Version="2.5.3" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="WebDriverManager" Version="2.2.7" />
   </ItemGroup>
 
@@ -38,6 +38,9 @@
     </Content>
     <Content Update="C:\Users\DELL\.nuget\packages\noksa.nunit.allure\2.5.1\contentFiles\any\net471\allureConfig.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\gunr\.nuget\packages\noksa.nunit.allure\2.5.3\contentFiles\any\net452\allureConfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Update="C:\Users\luizc\.nuget\packages\noksa.nunit.allure\2.5.2\contentFiles\any\net471\allureConfig.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
